# ChangeLog for x11-libs/libxcb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.29 2009/02/06 10:48:19 armin76 Exp $

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> libxcb-1.1.ebuild:
  arm/ia64/s390/sh stable wrt #244210

  01 Feb 2009; nixnut <nixnut@gentoo.org> libxcb-1.1.ebuild:
  ppc stable #244210

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org> libxcb-1.1.ebuild:
  Stable on alpha, bug #244210

  28 Jan 2009; Brent Baude <ranger@gentoo.org> libxcb-1.1.ebuild:
  Marking libxcb-1.1 ppc64 for bug 244210

  23 Jan 2009; Markus Meier <maekke@gentoo.org> libxcb-1.1.ebuild:
  amd64/x86 stable, bug #244210

  21 Jan 2009; Jeroen Roovers <jer@gentoo.org> libxcb-1.1.ebuild:
  Stable for HPPA (bug #244210).

  21 Jan 2009; Ferris McCormick <fmccor@gentoo.org> libxcb-1.1.ebuild:
  Sparc stable, Bug #244210.

*libxcb-1.1.90.1 (30 Jul 2008)

  30 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +libxcb-1.1.90.1.ebuild:
  Bump. Adds support for XInput and SELinux extensions, the
  language-dependent parts of a Python parser, and other bugfixes.

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>; libxcb-1.1.ebuild:
  Add a post-installation notice about the new sloppy locking.

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>; libxcb-1.1.ebuild:
  Add USE=doc flag to skip the API docs.

*libxcb-1.1 (07 Nov 2007)

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>; +libxcb-1.1.ebuild:
  Bump. Adds that variable everyone's been clamoring for to stop apps from
  dying: set LIBXCB_ALLOW_SLOPPY_LOCK to avoid aborting. Also has a number of
  important bugfixes.

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>; libxcb-1.0.ebuild:
  Update dep to pull in xcb-proto of the same version.

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> libxcb-1.0.ebuild:
  Stable on mips, per #175465.

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libxcb-0.9.93.ebuild: