@@ -1,4 +1,4 @@
 DIST libxcb-1.1.90.1.tar.bz2 475250 RMD160 3e0639b4348fb8041b970d64ef28f23080c29884 SHA1 5d34433f5cb7febac9b3713c1549f53357fdeef7 SHA256 7ccd862a295562412e9fe75cb83cc593db5c88d162b3ce1f7a326dd116381e88
-EBUILD libxcb-1.1.90.1.ebuild 1176 RMD160 20c5ff2ce2cad6bad9335cfb8d7723b3ecca3ea3 SHA1 656bf5238b232a4daaafa06ebd21f73e64384099 SHA256 ec1caf5360cc6e4459dcb46410c45c3a17e30c396c7ce2b3e4103b149f7d34ab
-MISC ChangeLog 3745 RMD160 e61ba44a4a1866df0434ecc73af58e04667c4535 SHA1 d0408d18f23c2df543fda74f93fa5d511c9e5067 SHA256 3e6fd258e259395e1260f07ab2c426f46668a140d44cb0de1da419401b32f9d6
+EBUILD libxcb-1.1.90.1.ebuild 1195 RMD160 02c2f5b0fce088eb083a5b52e4bec3d81c50fdc7 SHA1 5175a31884e5df1f672dbd6f1560a1a75a8e273b SHA256 1c5a368132a49038139e1f606dda2930695b66b4cbdf210b1ea95570b88a65f8
+MISC ChangeLog 3890 RMD160 6380078018924ac78067c869c45f5aa07bd51116 SHA1 103b2fc020d18270ea6c321716dae8643e33d6ac SHA256 835587a121a5ba3076a77ad5f92412e8fbff19f6900bba2aeaeaa5ad005751da
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
