@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/libxcb-1.1.90.1.ebuild,v 1.1 2008/07/30 22:38:05 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/libxcb-1.1.90.1.ebuild,v 1.2 2009/05/04 17:06:59 ssuominen Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -21,9 +21,11 @@ DEPEND="${RDEPEND}
 	dev-libs/libxslt
 	>=x11-proto/xcb-proto-1.2"
 
-CONFIGURE_OPTIONS="$(use_enable doc build-docs)
-	$(use_enable selinux xselinux)
-	--enable-xinput"
+pkg_setup() {
+	CONFIGURE_OPTIONS="$(use_enable doc build-docs)
+		$(use_enable selinux xselinux)
+		--enable-xinput"
+}
 
 pkg_postinst() {
 	x-modular_pkg_postinst
