@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libxcb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.29 2009/02/06 10:48:19 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.30 2009/05/04 17:06:59 ssuominen Exp $
+
+  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libxcb-1.1.ebuild,
+  libxcb-1.1.90.1.ebuild:
+  Move use_ functions out of global scope.
 
   06 Feb 2009; Raúl Porcel <armin76@gentoo.org> libxcb-1.1.ebuild:
   arm/ia64/s390/sh stable wrt #244210
